--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -22,6 +22,7 @@
 .login-wrapper button{
     width: 100%;
     padding: 10px;
+    margin: 5px;
     background-color: #007bff;
     color: white;
     border: none;
