--- a/src/styles/guestbook.css
+++ b/src/styles/guestbook.css
@@ -45,3 +45,23 @@
   text-align: center;
   padding: 20px;
 }
+
+.delete-container {
+  position: fixed;
+  inset: 0; /* top:0, left:0, right:0, bottom:0과 동일 */
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.delete-block {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  width: 400px;
+  max-width: 90%;
+  box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
+  text-align: center;
+}
